fixing align center mobile

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -388,6 +388,17 @@
 	.pul-right-mobile{
 		float: right;
 	}
+	.text-center-mobile{
+		float: none;
+		text-align: center;
+		&.pull-left{
+			float: none;
+		}
+		&.pull-right{
+			float: none;
+		}
+	}
+	
 	a[data-icon]{
 		width: 40px;
 		height: 40px;
