--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2129,16 +2129,7 @@ ol.linenums {
 .text-center{
 	text-align: center;
 }
-.text-center-mobile{
-	float: none;
-	text-align: center;
-	&.pull-left{
-		float: none;
-	}
-	&.pull-right{
-		float: none;
-	}
-}
+
 .thumbnail{
 	background-color: @white;
 }
